Mejoras y correcciones en: Grabaci├│n de video

--- a/CodigoFuente/Desarrollo/x32/Orbita.VA/Orbita.VA.Comun/Orbita.VA.Comun.csproj
+++ b/CodigoFuente/Desarrollo/x32/Orbita.VA/Orbita.VA.Comun/Orbita.VA.Comun.csproj
@@ -142,6 +142,9 @@
     <NoWarn>1591,1592,1573,1571,1570,1572</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AForge.Imaging">
+      <HintPath>..\..\Comun\VA\AForge\AForge.Imaging.dll</HintPath>
+    </Reference>
     <Reference Include="AForge.Video.FFMPEG, Version=2.2.4.0, Culture=neutral, PublicKeyToken=03563089b1be05dd, processorArchitecture=x86">
       <HintPath>..\..\Comun\VA\AForge\AForge.Video.FFMPEG.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
